Base landing page design added with responsive elements for phone screens

--- a/index.html
+++ b/index.html
@@ -49,42 +49,48 @@
     <section>
 
         <div class="container-fluid">
-            <div class="row blurb-home">
-                <div class="col-12 col-md-6">
-                    <!-- placeholder-profile image -->
-                    <div class="circle-home-profiler">placeholder image</div>
+            <div class="row">
+                <!-- section container for profile image -->
+                <div class="col-12 col-md-6 home-hero-image-div">
+                    <!-- profile image circle div -->
+                    <div class="home-hero-image-circle">placeholder image</div>
                 </div>
-                <div class="col-12 col-md-6 hero-text">
-                    <h2>Hi! My name is ...</h2>
-                    <h1>Stephen Harrold</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting, remaining essentially unchanged. It was
-                        popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                        and more recently with desktop publishing software like Aldus PageMaker including versions of
-                        Lorem Ipsum.</p>
+                <div class="col-12 col-md-6 home-hero-blurb">
+                    <div class="home-hero-blurb-text">
+                        <h2>Hi! My name is ...</h2>
+                        <h1>Stephen Harrold</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="row menu-circle-home">
-                <div class="col-md-3">
-                    <div class="circle-home-button">
+            <div class="row">
+                <div class="col-12 col-md-3 home-nav-button-div">
+                    <div class="home-nav-button-circle">
                         placeholder-aboutme link
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="circle-home-button">
+                <div class="col-12 col-md-3 home-nav-button-div">
+                    <div class="home-nav-button-circle">
+                        placeholder-skills link
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 home-nav-button-div">
+                    <div class="home-nav-button-circle">
+                        placeholder-projects link
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 home-nav-button-div">
+                    <div class="home-nav-button-circle">
                         placeholder-contact link
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="circle-home-button">
-                        placeholder-contact link
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="circle-home-button">
-                        placeholder-contact link
+            </div>
+
+            <div class="row" id="home-nav-contact-special-div">
+                <div class="col-12">
+                    <div class="alert alert-success home-nav-contact-special-button" role="alert">
+                        Contact Me!
                     </div>
                 </div>
             </div>
