style: adjusted landing page blurb elements to display better on mobile, maint: corrected media queries comments, feat: added fontawesome icons for landing page nav menu

--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteHarr</title>
+
+    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
@@ -49,7 +59,7 @@
     <section>
 
         <div class="container-fluid">
-            <div class="row">
+            <div class="row home">
                 <!-- section container for profile image -->
                 <div class="col-12 col-md-6 home-hero-image-div">
                     <!-- profile image circle div -->
@@ -64,29 +74,37 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Big home page navigation buttons that appear only on devices bigger than mobile -->
             <div class="row">
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
-                        placeholder-aboutme link
+                        <!-- placeholder-aboutme link -->
+                        <i class="fas fa-book-open"></i>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
-                        placeholder-skills link
+                        <!-- placeholder-skills link -->
+                        <i class="fas fa-tools"></i>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
-                        placeholder-projects link
+                        <!-- placeholder-projects link -->
+                        <i class="fas fa-lightbulb"></i>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
-                        placeholder-contact link
+                        <!-- placeholder-contact link -->
+                        <i class="fas fa-comments"></i>
                     </div>
                 </div>
             </div>
 
+
+            <!-- Contact me small button that appears only on mobile -->
             <div class="row" id="home-nav-contact-special-div">
                 <div class="col-12">
                     <div class="alert alert-success home-nav-contact-special-button" role="alert">
