style: added color palette to landing page, maint: cleaned up styling of site navbar

--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-gunmetal navbar-bottom-border">
 
-            <a href="#">Stephen Harrold</a>
+            <a class="navbar-brand" href="#">SteHarr</a>
 
-            <!-- Hamburger menu icon for smaller devices -->
+            <!-- Hamburger menu icon for smaller devices *Bootstrap* -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <!-- collapsable div for hamburger menu -->
+            <!-- collapsable div for hamburger menu *Bootstrap* -->
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 
-                <!-- Main site navigation bar with list items -->
+                <!-- Main site navigation bar with list items *Bootstrap* -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -63,13 +63,15 @@
                 <!-- section container for profile image -->
                 <div class="col-12 col-md-6 home-hero-image-div">
                     <!-- profile image circle div -->
-                    <div class="home-hero-image-circle">placeholder image</div>
+                    <div class="home-hero-image-circle"></div>
                 </div>
                 <div class="col-12 col-md-6 home-hero-blurb">
                     <div class="home-hero-blurb-text">
                         <h2>Hi! My name is ...</h2>
                         <h1>Stephen Harrold</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                        <p>Junior Full Stack Developer based in Dublin. I am a creative problem solver with a
+                            talent for making applications. I hope you enjoy browsing my site.
+                            <i class="far fa-smile"></i>
                         </p>
                     </div>
                 </div>
@@ -80,25 +82,37 @@
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-aboutme link -->
-                        <i class="fas fa-book-open"></i>
+                        <a href="#" class="home-nav-button-object">
+                            <i class="fas fa-book-open home-nav-button-icon"></i>
+                            <h5 class="home-nav-button-text">About</h5>
+                        </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-skills link -->
-                        <i class="fas fa-tools"></i>
+                        <a href="#" class="home-nav-button-object">
+                            <i class="fas fa-tools home-nav-button-icon"></i>
+                            <h5 class="home-nav-button-text">Skills</h5>
+                        </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-projects link -->
-                        <i class="fas fa-lightbulb"></i>
+                        <a href="#" class="home-nav-button-object">
+                            <i class="fas fa-lightbulb home-nav-button-icon"></i>
+                            <h5 class="home-nav-button-text">Projects</h5>
+                        </a>
                     </div>
                 </div>
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
                         <!-- placeholder-contact link -->
-                        <i class="fas fa-comments"></i>
+                        <a href="#" class="home-nav-button-object">
+                            <i class="fas fa-comments home-nav-button-icon"></i>
+                            <h5 class="home-nav-button-text">Contact</h5>
+                        </a>
                     </div>
                 </div>
             </div>
