feat: added about me page initial structure

--- a/index.html
+++ b/index.html
@@ -6,36 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SteHarr</title>
-
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" />
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
-
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-gunmetal navbar-bottom-border">
-
+        <!-- Overhead Navbar (built from bootstrap navbar component)-->
+        <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
             <a class="navbar-brand" href="#">SteHarr</a>
-
-            <!-- Hamburger menu icon for smaller devices *Bootstrap* -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <!-- collapsable div for hamburger menu *Bootstrap* -->
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-
-                <!-- Main site navigation bar with list items *Bootstrap* -->
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -49,16 +40,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
-
+                </ul>
             </div>
-
         </nav>
-
     </header>
-
+    ​
     <section>
-
-        <div class="container-fluid">
+        <div class="container">
             <div class="row home">
                 <!-- section container for profile image -->
                 <div class="col-12 col-md-6 home-hero-image-div">
@@ -76,7 +64,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- Big home page navigation buttons that appear only on devices bigger than mobile -->
             <div class="row">
                 <div class="col-12 col-md-3 home-nav-button-div">
@@ -116,8 +103,6 @@
                     </div>
                 </div>
             </div>
-
-
             <!-- Contact me small button that appears only on mobile -->
             <div class="row" id="home-nav-contact-special-div">
                 <div class="col-12">
@@ -127,19 +112,44 @@
                 </div>
             </div>
         </div>
-
+    </section>
+    ​
+    <section>
+        <div class="container">
+            <div class="row about-header">
+                <div class="col-12">
+                    <h2>About Me</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row about-timeline">
+                <div class="col-12 about-timeline-item">
+                    <h3 class="timeline-item-title">Study</h3>
+                    <p>Placeholder Text</p>
+                </div>
+                <div class="col-12 about-timeline-item">
+                    <h3 class="timeline-item-title">Work</h3>
+                    <p>Placeholder Text</p>
+                </div>
+                <div class="col-12 about-timeline-item">
+                    <h3 class="timeline-item-title">Now</h3>
+                    <p>Placeholder Text</p>
+                </div>
+                <div class="col-12">
+                    <h3 class="">Latest Project</h3>
+                    <p>Placeholder Text</p>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-        crossorigin="anonymous"></script>
-
 </body>
 
 </html>
