feat: added skills page initial structure

--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
             </div>
         </nav>
     </header>
-    ​
     <section>
         <div class="container">
             <div class="row home">
@@ -113,10 +112,9 @@
             </div>
         </div>
     </section>
-    ​
     <section>
         <div class="container">
-            <div class="row about-header">
+            <div class="row page-header">
                 <div class="col-12">
                     <h2>About Me</h2>
                 </div>
@@ -139,6 +137,94 @@
                 <div class="col-12">
                     <h3 class="">Latest Project</h3>
                     <p>Placeholder Text</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="page-header">Skills</h2>
+                </div>
+            </div>
+            <div class="row skills-box">
+                <div class="col-12">
+                    <h3 class="skills-box-header">Technologies</h3>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">HTML</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 60%"
+                                aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">CSS</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 45%"
+                                aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">Javascript</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 25%"
+                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">Bootstrap</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 45%"
+                                aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">Python</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 50%"
+                                aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">VBA</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 80%"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="row coding-languages-item">
+                        <div class="col-4 language-type">C++</div>
+                        <div class="col-8 progress coding-languages-progress-bar">
+                            <div class="progress-bar percentage" role="progressbar" style="width: 20%"
+                                aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="div row skills-box">
+                <div class="col-12">
+                    <h3 class="skills-box-header">Expertise</h3>
+                    <div class="row">
+                        <div class="col-6">
+                            <h4>Software</h4>
+                            <ul>
+                                <li class="expertise-item">RPA UiPath</li>
+                                <li class="expertise-item">CRM Microsoft Dynamics</li>
+                                <li class="expertise-item">SAP ERP Software</li>
+                                <li class="expertise-item">MADYMO Crash Test Simulation Analyis</li>
+                            </ul>
+                        </div>
+                        <div class="col-6">
+                            <h4>Soft</h4>
+                            <ul>
+                                <li class="expertise-item">Process Optimisation</li>
+                                <li class="expertise-item">Project Managment</li>
+                                <li class="expertise-item">Problem Solving</li>
+                                <li class="expertise-item">Presentation</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
