feat: added experise box to Skills page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- Overhead Nav Bar -->
     <header>
         <!-- Overhead Navbar (built from bootstrap navbar component)-->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
@@ -44,6 +45,7 @@
             </div>
         </nav>
     </header>
+    <!-- Landing Page -->
     <section>
         <div class="container">
             <div class="row home">
@@ -112,15 +114,14 @@
             </div>
         </div>
     </section>
+    <!-- About Me Page -->
     <section>
         <div class="container">
-            <div class="row page-header">
+            <div class="row">
                 <div class="col-12">
-                    <h2>About Me</h2>
+                    <h2 class="page-header">About Me</h2>
                 </div>
             </div>
-        </div>
-        <div class="container">
             <div class="row about-timeline">
                 <div class="col-12 about-timeline-item">
                     <h3 class="timeline-item-title">Study</h3>
@@ -141,6 +142,7 @@
             </div>
         </div>
     </section>
+    <!-- Skills Page -->
     <section>
         <div class="container">
             <div class="row">
@@ -148,8 +150,8 @@
                     <h2 class="page-header">Skills</h2>
                 </div>
             </div>
-            <div class="row skills-box">
-                <div class="col-12">
+            <div class="row">
+                <div class="col-12 col-md-7 skills-box">
                     <h3 class="skills-box-header">Technologies</h3>
                     <div class="row coding-languages-item">
                         <div class="col-4 language-type">HTML</div>
@@ -201,30 +203,31 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="div row skills-box">
-                <div class="col-12">
-                    <h3 class="skills-box-header">Expertise</h3>
-                    <div class="row">
-                        <div class="col-6">
-                            <h4>Software</h4>
-                            <ul>
-                                <li class="expertise-item">RPA UiPath</li>
-                                <li class="expertise-item">CRM Microsoft Dynamics</li>
-                                <li class="expertise-item">SAP ERP Software</li>
-                                <li class="expertise-item">MADYMO Crash Test Simulation Analyis</li>
-                            </ul>
-                        </div>
-                        <div class="col-6">
-                            <h4>Soft</h4>
-                            <ul>
-                                <li class="expertise-item">Process Optimisation</li>
-                                <li class="expertise-item">Project Managment</li>
-                                <li class="expertise-item">Problem Solving</li>
-                                <li class="expertise-item">Presentation</li>
-                            </ul>
+                <div class="col-12 col-md-4 skills-box">
+                    <div class="col-12">
+                        <h3 class="skills-box-header">Expertise</h3>
+                        <div class="row">
+                            <div class="col-6">
+                                <h4>Software</h4>
+                                <ul>
+                                    <li class="expertise-item">RPA UiPath</li>
+                                    <li class="expertise-item">CRM Microsoft Dynamics</li>
+                                    <li class="expertise-item">SAP ERP Software</li>
+                                    <li class="expertise-item">MADYMO Crash Test Simulation Analyis</li>
+                                </ul>
+                            </div>
+                            <div class="col-6">
+                                <h4>Soft</h4>
+                                <ul>
+                                    <li class="expertise-item">Process Optimisation</li>
+                                    <li class="expertise-item">Project Managment</li>
+                                    <li class="expertise-item">Problem Solving</li>
+                                    <li class="expertise-item">Presentation</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
