feat: added projects page initial structure

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
                     </div>
                 </div>
             </div>
-            <!-- Big home page navigation buttons that appear only on devices bigger than mobile -->
+            <!-- Contact me small button that appears only on mobile devices-->
+            <a href="#contact" class="btn btn-sienna" id="home-nav-contact-special-div">Contact Me!<i
+                    class="fas fa-comments home-nav-button-icon"></i></a>
+            <!-- Big home page navigation buttons that appears only on devices bigger than mobile -->
             <div class="row">
                 <div class="col-12 col-md-3 home-nav-button-div">
                     <div class="home-nav-button-circle">
@@ -101,14 +104,6 @@
                             <i class="fas fa-comments home-nav-button-icon"></i>
                             <h5 class="home-nav-button-text">Contact</h5>
                         </a>
-                    </div>
-                </div>
-            </div>
-            <!-- Contact me small button that appears only on mobile -->
-            <div class="row" id="home-nav-contact-special-div">
-                <div class="col-12">
-                    <div class="alert alert-success home-nav-contact-special-button" role="alert">
-                        Contact Me!
                     </div>
                 </div>
             </div>
@@ -153,6 +148,7 @@
             <div class="row">
                 <div class="col-12 col-md-7 skills-box">
                     <h3 class="skills-box-header">Technologies</h3>
+                    <!-- coding languages progress bars (adapted from bootstrap progress bars) -->
                     <div class="row coding-languages-item">
                         <div class="col-4 language-type">HTML</div>
                         <div class="col-8 progress coding-languages-progress-bar">
@@ -232,7 +228,71 @@
             </div>
         </div>
     </section>
-
+    <!-- Projects Page -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="page-header">Projects</h2>
+                </div>
+            </div>
+            <div class="projects-box">
+                <h3>HTML & CSS</h3>
+                <div class="card project-card">
+                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Whiskey Drop Website </h5>
+                        <p class="card-text">Fictional whiskey delivery website made while learning HTML, CSS &
+                            Bootstrap
+                        </p>
+                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="card project-card">
+                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">SteHarr Portfolio Page</h5>
+                        <p class="card-text">Personal website to showcase skills, projects & experience
+                        </p>
+                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="projects-box">
+                <h3>Python</h3>
+                <div class="card project-card">
+                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Process Capture Tool</h5>
+                        <p class="card-text">Screen capture tool to enable better task handovers between teammates
+                        </p>
+                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="projects-box">
+                <h3>VBA</h3>
+                <div class="card project-card">
+                    <img src="assets/images/placeholder_project_cards.PNG" class="card-img-top project-card-image"
+                        alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">VBA CoAuthoring Add-In</h5>
+                        <p class="card-text">Excel Add-In to enable multiple users to edit shared spreadsheets
+                            simultaneously
+                        </p>
+                        <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
+                                class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
