--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <!-- Overhead Navbar (built from bootstrap navbar component)-->
         <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-gunmetal navbar-bottom-border">
-            <a class="navbar-brand" href="#">SteHarr</a>
+            <a class="navbar-brand" href="#landing">SteHarr</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,23 +30,23 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Skills</a>
+                        <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </header>
-    <!-- Landing Page -->
-    <section>
+    <!------------------------------- Landing Page ------------------------------->
+    <section id="landing">
         <div class="container">
             <div class="row home">
                 <!-- section container for profile image -->
@@ -109,8 +109,8 @@
             </div>
         </div>
     </section>
-    <!-- About Me Page -->
-    <section>
+    <!------------------------------- About Me Page ------------------------------->
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -137,8 +137,8 @@
             </div>
         </div>
     </section>
-    <!-- Skills Page -->
-    <section>
+    <!------------------------------- Skills Page ------------------------------->
+    <section id="skills">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -228,8 +228,8 @@
             </div>
         </div>
     </section>
-    <!-- Projects Page -->
-    <section>
+    <!------------------------------- Projects Page ------------------------------->
+    <section id="projects">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -289,6 +289,45 @@
                         <a href="https://github.com/steharr" class="btn btn-sienna" target="_blank">View on Github <i
                                 class="fab fa-github"></i></a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!------------------------------- Contact Page ------------------------------->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="page-header">Contact</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="contact-form">
+                    <form action="https://formdump.codeinstitute.net" method="POST">
+                        <div class="contact-form-item">
+                            <label for="fname">First Name</label>
+                            <input class="form-input" type="text" id="fname" name:="first_name" placeholder="John"
+                                required />
+                        </div>
+                        <div class="contact-form-item">
+                            <label for="fname">Last Name</label>
+                            <input class="form-input" type="text" id="lname" name:="last_name" placeholder="Doe"
+                                required />
+                        </div>
+                        <div class="contact-form-item">
+                            <label for="email">Email</label>
+                            <input class="form-input" type="email" id="email" name:="email_address"
+                                placeholder="johndoe@gmail.com" required />
+                        </div>
+                        <div class="contact-form-item">
+                            <label for="message">Message</label>
+                            <textarea class="form-input" name="viewer_message" id="message" cols="30" rows="10"
+                                placeholder="your message" required></textarea>
+                        </div>
+                        <div class="contact-form-item">
+                            <button class="btn btn-sienna" type="submit">Submit <i class="fas fa-check"></i></button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
