style: made about me page responsive for all screens bigger than phone

--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
                 </div>
             </div>
             <div class="row about-timeline">
-                <div class="col-12 about-timeline-item">
+                <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Study</h3>
                     <p>Placeholder Text</p>
                 </div>
-                <div class="col-12 about-timeline-item">
+                <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Work</h3>
                     <p>Placeholder Text</p>
                 </div>
-                <div class="col-12 about-timeline-item">
+                <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Now</h3>
                     <p>Placeholder Text</p>
                 </div>
-                <div class="col-12">
+                <div class="col-12 col-md-3">
                     <h3 class="">Latest Project</h3>
                     <p>Placeholder Text</p>
                 </div>
