feat: added text content to about me page

--- a/index.html
+++ b/index.html
@@ -117,18 +117,54 @@
                     <h2 class="page-header">About Me</h2>
                 </div>
             </div>
+            <div class="row col-9 about-timeline-visual">
+                <div class="col-md-3">
+                    <div class="about-timeline-image study"></div>
+                </div>
+                <div class="col-md-3">
+                    <div class="about-timeline-image work"></div>
+                </div>
+                <div class="col-md-3">
+                    <div class="about-timeline-image now"></div>
+                </div>
+            </div>
             <div class="row about-timeline">
                 <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Study</h3>
-                    <p>Placeholder Text</p>
+                    <p>I studied at Trinity College Dublin to a Masters' Degree level. My
+                        degree was in Mechanical and
+                        Manufacturing Engineering. In this course I enhanced my problem solving skills and developed a
+                        strong work ethic. My main drive at this point was physics and maths but I gained some exposure
+                        to programming at this early stage, working with C++ for my computer modules.</p>
+                    <p> For my Masters
+                        thesis, I was assessing the effectiveness of using a crash test software called <a
+                            href="https://tass.plm.automation.siemens.com/madymo" target="_blank">MADYMO</a> to help
+                        diagnose sports concussion injuries. My passion for
+                        software/IT started to grow during this time</p>
                 </div>
                 <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Work</h3>
-                    <p>Placeholder Text</p>
+                    <p>After university, I started work at global semiconductor manufacturer<a
+                            href="https://www.infineon.com/" target="_blank"> Infineon Technologies</a> where I work
+                        today. My role is as a supply chain
+                        Order Managment Specialist. I work alot on process engineering; optimizing our order management
+                        processes in SAP to be
+                        as efficient as possible. </p>
+                    <p> I also coordinate RPA projects to help automate our operations as much
+                        as possible. There is a big need for automating manual tasks within my team; this is where I
+                        have worked extensively with VBA to automate various spreadsheet tasks such as report
+                        generation, database
+                        maintenance, email sending and much more.</p>
                 </div>
                 <div class="col-12 col-md-3 about-timeline-item">
                     <h3 class="timeline-item-title">Now</h3>
-                    <p>Placeholder Text</p>
+                    <p>Having become fluent at using VBA and enjoyed programming so much, I decided I wanted to pursue a
+                        career in development. I enrolled in <a href="https://codeinstitute.net/" target="_blank">
+                            Code Insititute's</a> Full Stack Software Development Diploma and am currently doing the
+                        course part time. </p>
+                    <p> I am learning various front end and back end languages such as HTML, CSS,
+                        Javascript and Python. I am also advancing my skills as much as I can in my spare time and
+                        building up my github portfolio with projects I have developed in VBA.</p>
                 </div>
                 <div class="col-12 col-md-3">
                     <h3 class="">Latest Project</h3>
